--- a/CourseDemo/src/app/app.component.html
+++ b/CourseDemo/src/app/app.component.html
@@ -7,7 +7,11 @@
 
 <app-sidebar class="col-2"></app-sidebar>
 
-<app-home class="col-10"></app-home>
+<!-- <app-home class="col-10"></app-home> -->
+
+<!-- <app-product-list class="col-10"> </app-product-list> -->
+
+<app-order-master class="col-10"></app-order-master>
 
 </section>
 
