--- a/CourseDemo/src/app/components/header/header.component.html
+++ b/CourseDemo/src/app/components/header/header.component.html
@@ -7,10 +7,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home</a>
-      <a class="nav-item nav-link" href="#">Features</a>
-      <a class="nav-item nav-link" href="#">Pricing</a>
-      <a class="nav-item nav-link disabled" href="#">Disabled</a>
+      <a routerLinkActive="Active" routerLink="/Home" class="nav-item nav-link">Home</a>
+      <a routerLinkActive="Active" routerLink="/Products" class="nav-item nav-link">Products</a>
+      <a routerLinkActive="Active" routerLink="/Order" class="nav-item nav-link">Order</a>
+      <a routerLinkActive="Active" routerLink="/login-user" class="nav-item nav-link">Login</a>
+      <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
     </div>
   </div>
 </nav>
