--- a/CourseDemo/src/app/components/login-user/login-user.component.html
+++ b/CourseDemo/src/app/components/login-user/login-user.component.html
@@ -1,1 +1,3 @@
-<p>login-user works!</p>
+
+<button [disabled]="isUserLogged" type="button" class="btn btn-success m-3" (click)="login()">Login</button>
+<button [disabled]="!isUserLogged" type="button" class="btn btn-danger m-3"  (click)="logout()">Logout</button>
